--- a/pom.xml
+++ b/pom.xml
@@ -170,8 +170,9 @@
                     <execution>
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
+
                         <configuration>
-                            <mainClass>com.example.elektrocalc/com.example.elektrocalc.Main</mainClass>
+                            <mainClass>com.example.elektrocalc.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
