--- a/pom.xml
+++ b/pom.xml
@@ -166,21 +166,17 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <configuration>
+                            <mainClass>com.example.elektrocalc.Main</mainClass>
+                </configuration>
                 <executions>
                     <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>com.example.elektrocalc.Main</mainClass>
-                            <launcher>Main</launcher>
-                            <noManPages>true</noManPages>
-                            <stripDebug>true</stripDebug>
-                            <noHeaderFiles>true</noHeaderFiles>
-                        </configuration>
+                        <id>create-jfxjar</id>
+                        <phase>package</phase>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <!-- Build an executable JAR -->
                 <groupId>org.apache.maven.plugins</groupId>
